src/objects/Role_to_PRPC_Map__c.object
<CustomObject>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <label>Product Rate Plan Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlanCharge__c.zqu__Deleted__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Role to PRPC Map</relationshipLabel>
        <relationshipName>Role_to_PRPC_Map</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Role to PRPC Map</relationshipLabel>
        <relationshipName>Role_to_PRPC_Map</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Product_Rate_Plan_Charge__r.zqu__ProductRatePlan__r.zqu__Product__r.zqu__SKU2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Role to PRPC Map</label>
    <nameField>
        <displayFormat>RM-{000000}</displayFormat>
        <label>Role to PRPC Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role to PRPC Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Rate_Plan_Charge__c</columns>
        <columns>SKU__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Product_Rate_Plan_Charge__c</columns>
        <columns>Role__c</columns>
        <columns>SKU__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>